// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package photorpc;

// 生成 golang 代码后的包名
option go_package = "./photorpc";

message EmptyReq {
}

message EmptyResp {
}

message IdReq {
  int64 id = 1;
}

message IdsReq {
  repeated int64 ids = 1;
}

message UserIdReq {
  int64 user_id = 1;
}

message BatchResp {
  int64 success_count = 1;
}

message CountResp {
  int64 count = 1;
}

/************** blog 相册管理 **************/
message PhotoNew {
  int64 id = 1;// 主键
  int64 album_id = 2;// 相册id
  string photo_name = 3;// 照片名
  string photo_desc = 4;// 照片描述
  string photo_src = 5;// 照片地址
  int64 is_delete = 6;// 是否删除
}

message PhotoDetails {
  int64 id = 1;// 主键
  int64 album_id = 2;// 相册id
  string photo_name = 3;// 照片名
  string photo_desc = 4;// 照片描述
  string photo_src = 5;// 照片地址
  int64 is_delete = 6;// 是否删除
  int64 created_at = 7;// 创建时间
  int64 updated_at = 8;// 更新时间
}

message FindPhotoListReq {
  int64 page = 1;
  int64 page_size = 2;
  string sorts = 3; // 排序
}

message FindPhotoListResp {
  repeated PhotoDetails list = 1;
}

message AlbumNew {
  int64 id = 1;// 主键
  string album_name = 2;// 相册名
  string album_desc = 3;// 相册描述
  string album_cover = 4;// 相册封面
  int64 is_delete = 5;// 是否删除
  int64 status = 6;// 状态值 1公开 2私密
  int64 created_at = 7;// 创建时间
  int64 updated_at = 8;// 更新时间
}

message AlbumDetails {
  int64 id = 1;// 主键
  string album_name = 2;// 相册名
  string album_desc = 3;// 相册描述
  string album_cover = 4;// 相册封面
  int64 is_delete = 5;// 是否删除
  int64 status = 6;// 状态值 1公开 2私密
  int64 created_at = 7;// 创建时间
  int64 updated_at = 8;// 更新时间
}

message FindAlbumListReq {
  int64 page = 1;
  int64 page_size = 2;
  string sorts = 3; // 排序
}

message FindAlbumListResp {
  repeated AlbumDetails list = 1;
}

message BannerNew {
  int64 id = 1;// 页面id
  string page_name = 2;// 页面名
  string page_label = 3;// 页面标签
  string page_cover = 4;// 页面封面
}

message BannerDetails {
  int64 id = 1;// 页面id
  string page_name = 2;// 页面名
  string page_label = 3;// 页面标签
  string page_cover = 4;// 页面封面
  int64 created_at = 5;// 创建时间
  int64 updated_at = 6;// 更新时间
}

message FindBannerListReq {
  int64 page = 1;
  int64 page_size = 2;
  string sorts = 3; // 排序
}

message FindBannerListResp {
  repeated BannerDetails list = 1;
}

service PhotoRpc {
  // 创建照片
  rpc AddPhoto(PhotoNew) returns(PhotoDetails);
  // 更新照片
  rpc UpdatePhoto(PhotoNew) returns(PhotoDetails);
  // 删除照片
  rpc DeletePhoto(IdReq) returns(BatchResp);
  // 批量删除照片
  rpc DeletePhotoList(IdsReq) returns(BatchResp);
  // 查询照片列表
  rpc FindPhotoList(FindPhotoListReq) returns(FindPhotoListResp);


  // 创建相册
  rpc AddAlbum(AlbumNew) returns(AlbumDetails);
  // 更新相册
  rpc UpdateAlbum(AlbumNew) returns(AlbumDetails);
  // 删除相册
  rpc DeleteAlbum(IdReq) returns(BatchResp);
  // 批量删除相册
  rpc DeleteAlbumList(IdsReq) returns(BatchResp);
  // 查询相册列表
  rpc FindAlbumList(FindAlbumListReq) returns(FindAlbumListResp);


  // 创建页面
  rpc AddBanner(BannerNew) returns(BannerDetails);
  // 更新页面
  rpc UpdateBanner(BannerNew) returns(BannerDetails);
  // 删除页面
  rpc DeleteBanner(IdReq) returns(BatchResp);
  // 批量删除页面
  rpc DeleteBannerList(IdsReq) returns(BatchResp);
  // 查询页面列表
  rpc FindBannerList(FindBannerListReq) returns(FindBannerListResp);
}
